moved database url to env

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
-django>=1.8,<2.0
-chatterbot>=0.8
 beautifulsoup4==4.6.0
-StackAPI==0.1.9
+certifi==2018.4.16
+chardet==3.0.4
+ChatterBot==0.8.7
+chatterbot-corpus==1.1.2
+dj-database-url==0.5.0
+Django==1.11.14
+future==0.16.0
+idna==2.7
+mathparse==0.1.1
+nltk==3.3
+oauthlib==2.1.0
+psycopg2==2.7.5
+pymongo==3.7.0
+python-dateutil==2.6.1
 python-dotenv==0.8.2
+python-twitter==3.4.2
+pytz==2018.5
+PyYAML==3.13
+requests==2.19.1
+requests-oauthlib==1.0.0
+six==1.11.0
+SQLAlchemy==1.2.9
+StackAPI==0.1.9
+urllib3==1.23
