--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chatterbot-corpus==1.1.2
 dj-database-url==0.5.0
 Django==1.11.14
 future==0.16.0
+gunicorn==19.9.0
 idna==2.7
 mathparse==0.1.1
 nltk==3.3
