--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ ChatterBot==0.8.7
 chatterbot-corpus==1.1.2
 dj-database-url==0.5.0
 Django==1.11.14
+django-cors-headers==2.4.0
 django-taggit==0.22.2
 future==0.16.0
 gunicorn==19.9.0
